playground-series commit 11May2023

--- a/playground-series/s3-kidneystone-prediction/eda_and_ml_model.ipynb
+++ b/playground-series/s3-kidneystone-prediction/eda_and_ml_model.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '../data/input/'\n",
+    "data_path = './data/input/'\n",
     "train_df = pd.read_csv(data_path + 'train.csv', index_col=0)\n",
     "test_df = pd.read_csv(data_path + 'test.csv', index_col=0)"
    ]
