Digit Recognizer: Added Preprocessor Notebook

--- a/digit-recognizer/baseline_deep_cnn_model.ipynb
+++ b/digit-recognizer/baseline_deep_cnn_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,17 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import tensorflow as tf\n",
     "\n",
     "import keras\n",
-    "from keras import layers, optimizers, metrics, callbacks"
+    "from keras import layers, optimizerss, metrics, callbacks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +54,7 @@
     "# Reshape each row to 28 * 26 (Image)\n",
     "X = X.reshape(-1, 28, 28, 1)\n",
     "\n",
-    "# Normalizing Pixel Values\n",
+    "# Normalizing/Rescaling Pixel Values\n",
     "X = X / 255\n",
     "\n",
     "# Determine number of distinct label types\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,83 +88,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_7\"\n",
+      "Model: \"sequential_36\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_14 (Conv2D)          (None, 26, 26, 32)        320       \n",
+      " conv2d_10 (Conv2D)          (None, 26, 26, 32)        320       \n",
       "                                                                 \n",
-      " max_pooling2d_14 (MaxPoolin  (None, 13, 13, 32)       0         \n",
+      " max_pooling2d_10 (MaxPoolin  (None, 13, 13, 32)       0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_15 (Conv2D)          (None, 11, 11, 16)        4624      \n",
+      " conv2d_11 (Conv2D)          (None, 11, 11, 16)        4624      \n",
       "                                                                 \n",
-      " max_pooling2d_15 (MaxPoolin  (None, 5, 5, 16)         0         \n",
+      " max_pooling2d_11 (MaxPoolin  (None, 5, 5, 16)         0         \n",
       " g2D)                                                            \n",
       "                                                                 \n",
-      " flatten_7 (Flatten)         (None, 400)               0         \n",
+      " flatten_16 (Flatten)        (None, 400)               0         \n",
       "                                                                 \n",
-      " dense_14 (Dense)            (None, 128)               51328     \n",
+      " dense_10 (Dense)            (None, 128)               51328     \n",
       "                                                                 \n",
-      " dense_15 (Dense)            (None, 10)                1290      \n",
+      " dense_11 (Dense)            (None, 10)                1290      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 57,562\n",
       "Trainable params: 57,562\n",
       "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "263/263 [==============================] - 19s 64ms/step - loss: 0.5529 - categorical_accuracy: 0.8467 - val_loss: 0.2112 - val_categorical_accuracy: 0.9404\n",
+      "1050/1050 [==============================] - 25s 21ms/step - loss: 0.3114 - categorical_accuracy: 0.9147 - val_loss: 0.1257 - val_categorical_accuracy: 0.9638\n",
       "Epoch 2/10\n",
-      "263/263 [==============================] - 16s 62ms/step - loss: 0.1589 - categorical_accuracy: 0.9566 - val_loss: 0.1428 - val_categorical_accuracy: 0.9599\n",
+      "1050/1050 [==============================] - 23s 22ms/step - loss: 0.0896 - categorical_accuracy: 0.9756 - val_loss: 0.0816 - val_categorical_accuracy: 0.9760\n",
       "Epoch 3/10\n",
-      "263/263 [==============================] - 19s 71ms/step - loss: 0.1065 - categorical_accuracy: 0.9701 - val_loss: 0.1027 - val_categorical_accuracy: 0.9700\n",
+      "1050/1050 [==============================] - 21s 20ms/step - loss: 0.0598 - categorical_accuracy: 0.9833 - val_loss: 0.0666 - val_categorical_accuracy: 0.9807\n",
       "Epoch 4/10\n",
-      "263/263 [==============================] - 23s 89ms/step - loss: 0.0810 - categorical_accuracy: 0.9775 - val_loss: 0.0880 - val_categorical_accuracy: 0.9738\n",
+      "1050/1050 [==============================] - 24s 23ms/step - loss: 0.0433 - categorical_accuracy: 0.9878 - val_loss: 0.0593 - val_categorical_accuracy: 0.9811\n",
       "Epoch 5/10\n",
-      "263/263 [==============================] - 22s 85ms/step - loss: 0.0643 - categorical_accuracy: 0.9821 - val_loss: 0.0782 - val_categorical_accuracy: 0.9764\n",
+      "1050/1050 [==============================] - 74s 70ms/step - loss: 0.0323 - categorical_accuracy: 0.9913 - val_loss: 0.0543 - val_categorical_accuracy: 0.9832\n",
       "Epoch 6/10\n",
-      "263/263 [==============================] - 23s 88ms/step - loss: 0.0523 - categorical_accuracy: 0.9857 - val_loss: 0.0664 - val_categorical_accuracy: 0.9804\n",
+      "1050/1050 [==============================] - 26s 25ms/step - loss: 0.0270 - categorical_accuracy: 0.9924 - val_loss: 0.0482 - val_categorical_accuracy: 0.9838\n",
       "Epoch 7/10\n",
-      "263/263 [==============================] - 22s 85ms/step - loss: 0.0436 - categorical_accuracy: 0.9885 - val_loss: 0.0632 - val_categorical_accuracy: 0.9806\n",
+      "1050/1050 [==============================] - 26s 25ms/step - loss: 0.0190 - categorical_accuracy: 0.9950 - val_loss: 0.0531 - val_categorical_accuracy: 0.9821\n",
       "Epoch 8/10\n",
-      "263/263 [==============================] - 23s 89ms/step - loss: 0.0376 - categorical_accuracy: 0.9899 - val_loss: 0.0577 - val_categorical_accuracy: 0.9824\n",
+      "1050/1050 [==============================] - 30s 28ms/step - loss: 0.0163 - categorical_accuracy: 0.9960 - val_loss: 0.0484 - val_categorical_accuracy: 0.9832\n",
       "Epoch 9/10\n",
-      "263/263 [==============================] - 23s 87ms/step - loss: 0.0302 - categorical_accuracy: 0.9923 - val_loss: 0.0557 - val_categorical_accuracy: 0.9830\n",
+      "1050/1050 [==============================] - 29s 28ms/step - loss: 0.0148 - categorical_accuracy: 0.9957 - val_loss: 0.0478 - val_categorical_accuracy: 0.9845\n",
       "Epoch 10/10\n",
-      "263/263 [==============================] - 20s 75ms/step - loss: 0.0264 - categorical_accuracy: 0.9935 - val_loss: 0.0567 - val_categorical_accuracy: 0.9812\n"
+      "1050/1050 [==============================] - 25s 24ms/step - loss: 0.0104 - categorical_accuracy: 0.9977 - val_loss: 0.0527 - val_categorical_accuracy: 0.9845\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2b079f14b20>"
+       "<keras.callbacks.History at 0x2069956d5e0>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,9 +167,11 @@
     "    ]\n",
     ")\n",
     "\n",
-    "\n",
     "#Compiling our model with appropriate loss function and optimizer\n",
     "model.compile(loss = 'categorical_crossentropy', optimizer= 'adam', metrics=['categorical_accuracy'])\n",
+    "\n",
+    "# Summary of the model\n",
+    "model.summary()\n",
     "\n",
     "#Fitting the model\n",
     "model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))"
@@ -191,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +205,7 @@
     "output = pd.read_csv(\"./data/input/sample_submission.csv\", index_col=0)\n",
     "output['Label'] = y_unseen_predicted\n",
     "\n",
-    "output.to_csv(f\"./data/output/digit_recognizer_{now}.csv\", index=True)"
+    "# output.to_csv(f\"./data/output/digit_recognizer_{now}.csv\", index=True)"
    ]
   }
  ],
