Digit Recognizer: Added Preprocessor Execution and Files

--- a/digit-recognizer/baseline_deep_cnn_model.ipynb
+++ b/digit-recognizer/baseline_deep_cnn_model.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,12 @@
     "import tensorflow as tf\n",
     "\n",
     "import keras\n",
-    "from keras import layers, optimizerss, metrics, callbacks"
+    "from keras import layers, optimizers, metrics, callbacks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,32 +88,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_36\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_10 (Conv2D)          (None, 26, 26, 32)        320       \n",
+      " conv2d (Conv2D)             (None, 26, 26, 32)        320       \n",
       "                                                                 \n",
-      " max_pooling2d_10 (MaxPoolin  (None, 13, 13, 32)       0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d (MaxPooling2D  (None, 13, 13, 32)       0         \n",
+      " )                                                               \n",
       "                                                                 \n",
-      " conv2d_11 (Conv2D)          (None, 11, 11, 16)        4624      \n",
+      " conv2d_1 (Conv2D)           (None, 11, 11, 16)        4624      \n",
       "                                                                 \n",
-      " max_pooling2d_11 (MaxPoolin  (None, 5, 5, 16)         0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d_1 (MaxPooling  (None, 5, 5, 16)         0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " flatten_16 (Flatten)        (None, 400)               0         \n",
+      " flatten (Flatten)           (None, 400)               0         \n",
       "                                                                 \n",
-      " dense_10 (Dense)            (None, 128)               51328     \n",
+      " dense (Dense)               (None, 128)               51328     \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 10)                1290      \n",
+      " dense_1 (Dense)             (None, 10)                1290      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 57,562\n",
@@ -121,34 +121,34 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "1050/1050 [==============================] - 25s 21ms/step - loss: 0.3114 - categorical_accuracy: 0.9147 - val_loss: 0.1257 - val_categorical_accuracy: 0.9638\n",
+      "1050/1050 [==============================] - 21s 18ms/step - loss: 0.3251 - categorical_accuracy: 0.9068 - val_loss: 0.1437 - val_categorical_accuracy: 0.9608\n",
       "Epoch 2/10\n",
-      "1050/1050 [==============================] - 23s 22ms/step - loss: 0.0896 - categorical_accuracy: 0.9756 - val_loss: 0.0816 - val_categorical_accuracy: 0.9760\n",
+      "1050/1050 [==============================] - 18s 17ms/step - loss: 0.0976 - categorical_accuracy: 0.9723 - val_loss: 0.0857 - val_categorical_accuracy: 0.9743\n",
       "Epoch 3/10\n",
-      "1050/1050 [==============================] - 21s 20ms/step - loss: 0.0598 - categorical_accuracy: 0.9833 - val_loss: 0.0666 - val_categorical_accuracy: 0.9807\n",
+      "1050/1050 [==============================] - 19s 18ms/step - loss: 0.0654 - categorical_accuracy: 0.9810 - val_loss: 0.0658 - val_categorical_accuracy: 0.9793\n",
       "Epoch 4/10\n",
-      "1050/1050 [==============================] - 24s 23ms/step - loss: 0.0433 - categorical_accuracy: 0.9878 - val_loss: 0.0593 - val_categorical_accuracy: 0.9811\n",
+      "1050/1050 [==============================] - 22s 21ms/step - loss: 0.0477 - categorical_accuracy: 0.9863 - val_loss: 0.0598 - val_categorical_accuracy: 0.9811\n",
       "Epoch 5/10\n",
-      "1050/1050 [==============================] - 74s 70ms/step - loss: 0.0323 - categorical_accuracy: 0.9913 - val_loss: 0.0543 - val_categorical_accuracy: 0.9832\n",
+      "1050/1050 [==============================] - 21s 20ms/step - loss: 0.0365 - categorical_accuracy: 0.9899 - val_loss: 0.0565 - val_categorical_accuracy: 0.9821\n",
       "Epoch 6/10\n",
-      "1050/1050 [==============================] - 26s 25ms/step - loss: 0.0270 - categorical_accuracy: 0.9924 - val_loss: 0.0482 - val_categorical_accuracy: 0.9838\n",
+      "1050/1050 [==============================] - 21s 20ms/step - loss: 0.0281 - categorical_accuracy: 0.9922 - val_loss: 0.0500 - val_categorical_accuracy: 0.9848\n",
       "Epoch 7/10\n",
-      "1050/1050 [==============================] - 26s 25ms/step - loss: 0.0190 - categorical_accuracy: 0.9950 - val_loss: 0.0531 - val_categorical_accuracy: 0.9821\n",
+      "1050/1050 [==============================] - 20s 19ms/step - loss: 0.0211 - categorical_accuracy: 0.9942 - val_loss: 0.0488 - val_categorical_accuracy: 0.9843\n",
       "Epoch 8/10\n",
-      "1050/1050 [==============================] - 30s 28ms/step - loss: 0.0163 - categorical_accuracy: 0.9960 - val_loss: 0.0484 - val_categorical_accuracy: 0.9832\n",
+      "1050/1050 [==============================] - 21s 20ms/step - loss: 0.0161 - categorical_accuracy: 0.9963 - val_loss: 0.0554 - val_categorical_accuracy: 0.9825\n",
       "Epoch 9/10\n",
-      "1050/1050 [==============================] - 29s 28ms/step - loss: 0.0148 - categorical_accuracy: 0.9957 - val_loss: 0.0478 - val_categorical_accuracy: 0.9845\n",
+      "1050/1050 [==============================] - 21s 20ms/step - loss: 0.0148 - categorical_accuracy: 0.9958 - val_loss: 0.0519 - val_categorical_accuracy: 0.9842\n",
       "Epoch 10/10\n",
-      "1050/1050 [==============================] - 25s 24ms/step - loss: 0.0104 - categorical_accuracy: 0.9977 - val_loss: 0.0527 - val_categorical_accuracy: 0.9845\n"
+      "1050/1050 [==============================] - 22s 21ms/step - loss: 0.0113 - categorical_accuracy: 0.9974 - val_loss: 0.0495 - val_categorical_accuracy: 0.9840\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x2069956d5e0>"
+       "<keras.callbacks.History at 0x24d03641580>"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "875/875 [==============================] - 7s 7ms/step\n"
+      "875/875 [==============================] - 5s 6ms/step\n"
      ]
     }
    ],
